Fixed table spacing
gave rules heading created-by space

--- a/gems/core/static/css/styles.css
+++ b/gems/core/static/css/styles.css
@@ -468,7 +468,7 @@ th.name {
     width: 15%;
 }
 
-th.created-by, th.created-at {
+th.created-at {
     width: 15%;
 }
 
@@ -477,7 +477,7 @@ th.buttons {
 }
 
 th.rules {
-    width: 35%
+    width: 50%
 }
 
 th.survey-name {
